@@ -1,5 +1,6 @@
 <p><a class="externallink" rel="nofollow" href="http://www.google.com">http://www.google.com</a></p>
-<p><a class="externallink" rel="nofollow" href="http://www.google.com">http://www.google.com</a></p>
+<p><a class="externallink" rel="nofollow" href="http://www.google.com">[1]</a></p>
 <p><a class="externallink" rel="nofollow" href="http://www.google.com">Caption</a></p>
 <p><a class="externallink" rel="nofollow" href="http://www.google.com">Multiple word caption</a></p>
 <p><a class="externallink" rel="nofollow" href="http://www.google.com"><b>Bold caption</b></a></p>
+<p><a class="externallink" rel="nofollow" href="http://www.google.com">[2]</a></p>
