@@ -1,5 +1,5 @@
 <p><a class="externallink" rel="nofollow" href="https://www.google.com">https://www.google.com</a></p>
-<p><a class="externallink" rel="nofollow" href="https://www.google.com">https://www.google.com</a></p>
+<p><a class="externallink" rel="nofollow" href="https://www.google.com">[1]</a></p>
 <p><a class="externallink" rel="nofollow" href="https://www.google.com">Caption</a></p>
 <p><a class="externallink" rel="nofollow" href="https://www.google.com">Multiple word caption</a></p>
 <p><a class="externallink" rel="nofollow" href="https://www.google.com"><b>Bold caption</b></a></p>
