@@ -1,7 +1,7 @@
 <p><a class="externallink" rel="nofollow" href="mailto:email@email.com">mailto:email@email.com</a></p>
 <p><a class="externallink" rel="nofollow" href="mailto:email@email.com">mailto:email@email.com</a></p>
-<p><a class="externallink" rel="nofollow" href="mailto:email@email.com">mailto:email@email.com</a></p>
-<p><a class="externallink" rel="nofollow" href="mailto:email@email.com">mailto:email@email.com</a></p>
+<p><a class="externallink" rel="nofollow" href="mailto:email@email.com">[1]</a></p>
+<p><a class="externallink" rel="nofollow" href="mailto:email@email.com">[2]</a></p>
 <p><a class="externallink" rel="nofollow" href="mailto:email@email.com">Caption</a></p>
 <p><a class="externallink" rel="nofollow" href="mailto:email@email.com">Multiple word caption</a></p>
 <p><a class="externallink" rel="nofollow" href="mailto:email@email.com"><b>Bold caption</b></a></p>
