@@ -4,6 +4,9 @@
 New Features:
 
   * Add support for the Mediawiki <gallery> tag for generating image galleries.
+  * Display HTML links of the form "[http://example.com]" using numbered links
+    to match Mediawiki behavior.  The legacy behavior can be restored with a
+    configuration options.
   * Remove ability to automatically upgrade from versions prior to 0.9.0.
 
 Bugfixes:
